# makeExam

./: README.md
bp/: Android.bp  hello.c
cmake/file/: CMakeLists.txt
cmake/hello/: CMakeLists.txt
cmake/main/: CMakeLists.txt
cmake/mathlib/Alpha/: CMakeLists.txt  main.cpp
cmake/mathlib/Maths/: CMakeLists.txt
cmake/mathlib2/: CMakeLists.txt
cmake/mathlib2/Alpha/: CMakeLists.txt
cmake/section/: CMakeLists.txt  README.md  sec.c  section.c
cmake/sin/: CMakeLists.txt
cmake/sin2/include/: header.h
cmake/sin3/: CMakeLists.txt
cmake_arm/hello/: CMakeLists.txt
cmake_arm/main/: CMakeLists.txt
cmake_arm/sin/: CMakeLists.txt  main.cpp
cmake_arm/sin2/: CMakeLists.txt  main.cpp
cmake_arm/sin3/: main.cpp
make/: readme.md
make/file/: Makefile  file.c
make/hello/: Makefile  hello.c
make/main/: Makefile  main.cpp
make/mathlib2/Alpha/: CMakeListstxt
make/mathlib2/Maths/: maths.cpp  maths.h
make/section/: Makefile  a.lds  gcc.map  s.lds  s.sh  sec.s  section  section.c  section.s
make/sin2/cos/: cos.cpp
make/sin3/: sin.cpp
